# sdl_graphic

./: CMakeLists.txt  main.c
utils/: utils.c  utils.h
view/: render.c  render.h  renderer.c  renderer.h  window.c  window.h
